# cosmic-ext-quake-term

./: Cargo.toml  README.md  build.rs  justfile
.github/workflows/: ci.yml
data/: com.github.m0rf30.CosmicExtQuakeTerminal.desktop  justfile
i18n/de/: cosmic_ext_quake_terminal.ftl
i18n/en/: cosmic_ext_quake_term.ftl  cosmic_ext_quake_terminal.ftl  cosmic_quake_term.ftl
i18n/it/: cosmic_ext_quake_terminal.ftl
res/: io.github.big_ol_pants.CosmicQuakeTerm.desktop  io.github.big_ol_pants.CosmicQuakeTerm.metainfo.xml
src/: app.rs  config.rs  i18n.rs  ipc.rs  main.rs  process.rs  terminal.rs  wayland.rs
